zamna-spin/bindings/http_trigger.h

typedef struct http_trigger_string_t {
  uint8_t*ptr;
  size_t len;
} http_trigger_string_t;
typedef struct wasi_sockets_0_2_0_network_ip_address_t {
  uint8_t tag;
  union {
    wasi_sockets_0_2_0_network_ipv4_address_t     ipv4;
    wasi_sockets_0_2_0_network_ipv6_address_t     ipv6;
  } val;
} wasi_sockets_0_2_0_network_ip_address_t;
typedef struct wasi_sockets_0_2_0_network_ip_socket_address_t {
  uint8_t tag;
  union {
    wasi_sockets_0_2_0_network_ipv4_socket_address_t     ipv4;
    wasi_sockets_0_2_0_network_ipv6_socket_address_t     ipv6;
  } val;
} wasi_sockets_0_2_0_network_ip_socket_address_t;
typedef wasi_sockets_0_2_0_network_error_code_t wasi_sockets_0_2_0_udp_error_code_t;
// A received datagram.
typedef struct wasi_sockets_0_2_0_udp_incoming_datagram_t {
  // The payload.
  // 
  // Theoretical max size: ~64 KiB. In practice, typically less than 1500 bytes.
  http_trigger_list_u8_t   data;
  // The source address.
  // 
  // This field is guaranteed to match the remote address the stream was initialized with, if any.
  // 
  // Equivalent to the `src_addr` out parameter of `recvfrom`.
  wasi_sockets_0_2_0_udp_ip_socket_address_t   remote_address;
} wasi_sockets_0_2_0_udp_incoming_datagram_t;
// A datagram to be sent out.
typedef struct wasi_sockets_0_2_0_udp_outgoing_datagram_t {
  // The payload.
  http_trigger_list_u8_t   data;
  // The destination address.
  // 
  // The requirements on this field depend on how the stream was initialized:
  // - with a remote address: this field must be None or match the stream's remote address exactly.
  // - without a remote address: this field is required.
  // 
  // If this value is None, the send operation is equivalent to `send` in POSIX. Otherwise it is equivalent to `sendto`.
  wasi_sockets_0_2_0_udp_option_ip_socket_address_t   remote_address;
} wasi_sockets_0_2_0_udp_outgoing_datagram_t;
typedef struct {
  bool is_err;
  union {
    uint8_t ok;
    wasi_sockets_0_2_0_udp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_result_u8_error_code_t;
typedef struct {
  bool is_err;
  union {
    uint64_t ok;
    wasi_sockets_0_2_0_udp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_result_u64_error_code_t;
typedef struct {
  wasi_sockets_0_2_0_udp_incoming_datagram_t *ptr;
  size_t len;
} wasi_sockets_0_2_0_udp_list_incoming_datagram_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_udp_list_incoming_datagram_t ok;
    wasi_sockets_0_2_0_udp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_result_list_incoming_datagram_error_code_t;
typedef struct {
  wasi_sockets_0_2_0_udp_outgoing_datagram_t *ptr;
  size_t len;
} wasi_sockets_0_2_0_udp_list_outgoing_datagram_t;
typedef wasi_sockets_0_2_0_network_error_code_t wasi_sockets_0_2_0_udp_create_socket_error_code_t;
typedef wasi_sockets_0_2_0_udp_own_udp_socket_t wasi_sockets_0_2_0_udp_create_socket_own_udp_socket_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_udp_create_socket_own_udp_socket_t ok;
    wasi_sockets_0_2_0_udp_create_socket_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_create_socket_result_own_udp_socket_error_code_t;
typedef wasi_clocks_0_2_0_monotonic_clock_duration_t wasi_sockets_0_2_0_tcp_duration_t;
typedef wasi_sockets_0_2_0_network_error_code_t wasi_sockets_0_2_0_tcp_error_code_t;
typedef wasi_sockets_0_2_0_network_ip_socket_address_t wasi_sockets_0_2_0_tcp_ip_socket_address_t;
typedef struct wasi_sockets_0_2_0_tcp_own_tcp_socket_t {
  int32_t __handle;
} wasi_sockets_0_2_0_tcp_own_tcp_socket_t;
typedef struct wasi_sockets_0_2_0_tcp_borrow_tcp_socket_t {
  int32_t __handle;
} wasi_sockets_0_2_0_tcp_borrow_tcp_socket_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_void_error_code_t;
typedef struct {
  wasi_sockets_0_2_0_tcp_own_input_stream_t f0;
  wasi_sockets_0_2_0_tcp_own_output_stream_t f1;
} wasi_sockets_0_2_0_tcp_tuple2_own_input_stream_own_output_stream_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_tuple2_own_input_stream_own_output_stream_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_tuple2_own_input_stream_own_output_stream_error_code_t;
typedef struct {
  wasi_sockets_0_2_0_tcp_own_tcp_socket_t f0;
  wasi_sockets_0_2_0_tcp_own_input_stream_t f1;
  wasi_sockets_0_2_0_tcp_own_output_stream_t f2;
} wasi_sockets_0_2_0_tcp_tuple3_own_tcp_socket_own_input_stream_own_output_stream_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_tuple3_own_tcp_socket_own_input_stream_own_output_stream_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_tuple3_own_tcp_socket_own_input_stream_own_output_stream_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_ip_socket_address_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_ip_socket_address_error_code_t;
typedef struct {
  bool is_err;
  union {
    bool ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_bool_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_duration_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_duration_error_code_t;
typedef struct {
  bool is_err;
  union {
    uint32_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_u32_error_code_t;
typedef struct {
  bool is_err;
  union {
    uint8_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_u8_error_code_t;
typedef struct {
  bool is_err;
  union {
    uint64_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_u64_error_code_t;
typedef wasi_sockets_0_2_0_network_error_code_t wasi_sockets_0_2_0_tcp_create_socket_error_code_t;
typedef wasi_sockets_0_2_0_tcp_own_tcp_socket_t wasi_sockets_0_2_0_tcp_create_socket_own_tcp_socket_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_create_socket_own_tcp_socket_t ok;
    wasi_sockets_0_2_0_tcp_create_socket_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_create_socket_result_own_tcp_socket_error_code_t;
typedef wasi_sockets_0_2_0_network_error_code_t wasi_sockets_0_2_0_ip_name_lookup_error_code_t;
typedef wasi_sockets_0_2_0_network_ip_address_t wasi_sockets_0_2_0_ip_name_lookup_ip_address_t;
typedef struct wasi_sockets_0_2_0_ip_name_lookup_own_resolve_address_stream_t {
  int32_t __handle;
} wasi_sockets_0_2_0_ip_name_lookup_own_resolve_address_stream_t;
typedef struct wasi_sockets_0_2_0_ip_name_lookup_borrow_resolve_address_stream_t {
  int32_t __handle;
} wasi_sockets_0_2_0_ip_name_lookup_borrow_resolve_address_stream_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_ip_name_lookup_own_resolve_address_stream_t ok;
    wasi_sockets_0_2_0_ip_name_lookup_error_code_t err;
  } val;
} wasi_sockets_0_2_0_ip_name_lookup_result_own_resolve_address_stream_error_code_t;
typedef struct {
  bool is_some;
  wasi_sockets_0_2_0_ip_name_lookup_ip_address_t val;
} wasi_sockets_0_2_0_ip_name_lookup_option_ip_address_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_ip_name_lookup_option_ip_address_t ok;
    wasi_sockets_0_2_0_ip_name_lookup_error_code_t err;
  } val;
} wasi_sockets_0_2_0_ip_name_lookup_result_option_ip_address_error_code_t;
void wasi_sockets_0_2_0_udp_result_u8_error_code_free(wasi_sockets_0_2_0_udp_result_u8_error_code_t *ptr);
void wasi_sockets_0_2_0_udp_result_u64_error_code_free(wasi_sockets_0_2_0_udp_result_u64_error_code_t *ptr);
void wasi_sockets_0_2_0_udp_list_incoming_datagram_free(wasi_sockets_0_2_0_udp_list_incoming_datagram_t *ptr);
void wasi_sockets_0_2_0_udp_result_list_incoming_datagram_error_code_free(wasi_sockets_0_2_0_udp_result_list_incoming_datagram_error_code_t *ptr);
void wasi_sockets_0_2_0_udp_list_outgoing_datagram_free(wasi_sockets_0_2_0_udp_list_outgoing_datagram_t *ptr);
void wasi_sockets_0_2_0_udp_create_socket_result_own_udp_socket_error_code_free(wasi_sockets_0_2_0_udp_create_socket_result_own_udp_socket_error_code_t *ptr);
void wasi_sockets_0_2_0_tcp_ip_socket_address_free(wasi_sockets_0_2_0_tcp_ip_socket_address_t *ptr);
extern void wasi_sockets_0_2_0_tcp_tcp_socket_drop_own(wasi_sockets_0_2_0_tcp_own_tcp_socket_t handle);
extern wasi_sockets_0_2_0_tcp_borrow_tcp_socket_t wasi_sockets_0_2_0_tcp_borrow_tcp_socket(wasi_sockets_0_2_0_tcp_own_tcp_socket_t handle);
void wasi_sockets_0_2_0_tcp_result_void_error_code_free(wasi_sockets_0_2_0_tcp_result_void_error_code_t *ptr);
void wasi_sockets_0_2_0_tcp_result_tuple2_own_input_stream_own_output_stream_error_code_free(wasi_sockets_0_2_0_tcp_result_tuple2_own_input_stream_own_output_stream_error_code_t *ptr);
void wasi_sockets_0_2_0_tcp_result_tuple3_own_tcp_socket_own_input_stream_own_output_stream_error_code_free(wasi_sockets_0_2_0_tcp_result_tuple3_own_tcp_socket_own_input_stream_own_output_stream_error_code_t *ptr);
void wasi_sockets_0_2_0_tcp_result_ip_socket_address_error_code_free(wasi_sockets_0_2_0_tcp_result_ip_socket_address_error_code_t *ptr);
void wasi_sockets_0_2_0_tcp_result_bool_error_code_free(wasi_sockets_0_2_0_tcp_result_bool_error_code_t *ptr);
void wasi_sockets_0_2_0_tcp_result_duration_error_code_free(wasi_sockets_0_2_0_tcp_result_duration_error_code_t *ptr);
void wasi_sockets_0_2_0_tcp_result_u32_error_code_free(wasi_sockets_0_2_0_tcp_result_u32_error_code_t *ptr);
void wasi_sockets_0_2_0_tcp_result_u8_error_code_free(wasi_sockets_0_2_0_tcp_result_u8_error_code_t *ptr);
void wasi_sockets_0_2_0_tcp_result_u64_error_code_free(wasi_sockets_0_2_0_tcp_result_u64_error_code_t *ptr);
void wasi_sockets_0_2_0_tcp_create_socket_result_own_tcp_socket_error_code_free(wasi_sockets_0_2_0_tcp_create_socket_result_own_tcp_socket_error_code_t *ptr);
void wasi_sockets_0_2_0_ip_name_lookup_ip_address_free(wasi_sockets_0_2_0_ip_name_lookup_ip_address_t *ptr);
extern void wasi_sockets_0_2_0_ip_name_lookup_resolve_address_stream_drop_own(wasi_sockets_0_2_0_ip_name_lookup_own_resolve_address_stream_t handle);
extern wasi_sockets_0_2_0_ip_name_lookup_borrow_resolve_address_stream_t wasi_sockets_0_2_0_ip_name_lookup_borrow_resolve_address_stream(wasi_sockets_0_2_0_ip_name_lookup_own_resolve_address_stream_t handle);
void wasi_sockets_0_2_0_ip_name_lookup_result_own_resolve_address_stream_error_code_free(wasi_sockets_0_2_0_ip_name_lookup_result_own_resolve_address_stream_error_code_t *ptr);
void wasi_sockets_0_2_0_ip_name_lookup_option_ip_address_free(wasi_sockets_0_2_0_ip_name_lookup_option_ip_address_t *ptr);
void wasi_sockets_0_2_0_ip_name_lookup_result_option_ip_address_error_code_free(wasi_sockets_0_2_0_ip_name_lookup_result_option_ip_address_error_code_t *ptr);
// Sets the string `ret` to reference the input string `s` without copying it
void http_trigger_string_set(http_trigger_string_t *ret, const char*s);
// Creates a copy of the input nul-terminated string `s` and
// stores it into the component model string `ret`.
void http_trigger_string_dup(http_trigger_string_t *ret, const char*s);
// Creates a copy of the input string `s` with length `len` and
// stores it into the component model string `ret`.
// The length is specified in code units (bytes for UTF-8, 16-bit values for UTF-16).
void http_trigger_string_dup_n(http_trigger_string_t *ret, const char*s, size_t len);
// Deallocates the string pointed to by `ret`, deallocating
// the memory behind the string.
void http_trigger_string_free(http_trigger_string_t *ret);